Increased MaxPermSize, was running into mem problems during test.