@@ -21,6 +21,7 @@ fork := true
 parallelExecution in Test := false
 javaOptions ++= List(
   "-Xmx8G",
+  "-XX:MaxPermSize=384m",
   s"-Djava.library.path=${Environment.javaGdalDir}",
   "-Dsun.io.serialization.extendedDebugInfo=true")
 
